# turtle-trader

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
docs/: RULES.md  SCHEDULING.md  turtle-trading-capital-requirements.md
docs/bot/: 01-overview-and-domain.md  02-pydantic-models.md  03-position-monitor.md  04-module-implementations.md  05-implementation-and-reference.md  06-data-sources.md  turtle-trading-bot-spec-v2-complete.md
docs/plans/: 2026-01-27-architecture-review.md  2026-01-27-implementation-plan.md  2026-01-27-rules-verification.md  2026-01-28-backtesting-plan.md  2026-01-29-alerts-logging-design.md  2026-01-29-alerts-logging-implementation.md  2026-02-12-event-streaming-design.md
docs/research/: small-account-strategies.md  small-account-turtle-findings.md
results/: backtest_15etf_10k.json  backtest_15etf_10k_fractional.json  backtest_15etf_200k.json  backtest_15etf_200k_fractional.json
scripts/: backfill_position.py  backtest.py  backtest_small_account.py  daily_run.py  deploy.sh  fetch_fixture_data.py  monitor_positions.py  preload_backtest_data.py  setup_db.py  status.py  test_ibkr.py  test_neon.py  validate_data.py
src/adapters/backtesting/: engine.py  (+4 more)
src/domain/: rules.py
src/infrastructure/: config.py  database.py  discord.py  logging.py
tests/: conftest.py
tests/fixtures/: mgc_bars.json
tests/integration/: test_alert_logging.py  test_composite_feed.py  test_database.py  test_ibkr.py  test_n_repository.py  test_trade_math.py  test_trade_repository.py  test_yahoo.py
tests/unit/: test_docker.py
(+90 files in other folders)
